backend/tests/corpus/shadowing-neg-005.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  labels:
    cape-test-case: shadowing-neg-005
    owner-team: team-epsilon
  name: img-policy-clean-shadowing-neg-005
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaces:
    - shadow-ns-shadowing-neg-005-0
    - shadow-ns-shadowing-neg-005-1
    - shadow-ns-shadowing-neg-005-2
  parameters:
    repos:
    - mycompany.com/
